tests/cancel/cancel_5.stderr
error[E0382]: use of partially moved value: `s`
  --> $DIR/cancel_5.rs:81:40
   |
79 |     cancel(s.session1);
   |            ---------- value partially moved here
80 |
81 |     let s = send_mpst_a_to_b(random(), s);
   |                                        ^ value used here after partial move
   |
   = note: partial move occurs because `s.session1` has type `mpstthree::binary::Send<i32, mpstthree::binary::End>`, which does not implement the `Copy` trait

error[E0382]: use of partially moved value: `s`
  --> $DIR/cancel_5.rs:89:35
   |
87 |     cancel(s.session1);
   |            ---------- value partially moved here
88 |
89 |     let (_, s) = recv_mpst_b_to_a(s)?;
   |                                   ^ value used here after partial move
   |
   = note: partial move occurs because `s.session1` has type `Recv<i32, mpstthree::binary::End>`, which does not implement the `Copy` trait
